ruff line 80 max

--- a/example/01-basic-example.ipynb
+++ b/example/01-basic-example.ipynb
@@ -304,7 +304,9 @@
     "ax[0].set_xlabel(\"Energy, MeV\")\n",
     "ax[0].set_ylabel(\"Fluence per unit lethargy, F(E)E, neutron/(cm² ∙ s)\")\n",
     "ax[0].set_xscale(\"log\")\n",
-    "ax[0].legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\", borderaxespad=0.0, fontsize=8)\n",
+    "ax[0].legend(\n",
+    "    bbox_to_anchor=(1.05, 1), loc=\"upper left\", borderaxespad=0.0, fontsize=8\n",
+    ")\n",
     "ax[0].grid(True, which=\"both\", ls=\":\")\n",
     "ax[0].set_title(f\"Unfolded spectra\", fontsize=14)\n",
     "\n",
@@ -332,7 +334,9 @@
     "ax[1].set_ylabel(\"Readings\")\n",
     "# ax[1].set_yscale('log')\n",
     "ax[1].set_title(\"Effective readings\", fontsize=14)\n",
-    "ax[1].legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\", borderaxespad=0.0, fontsize=8)\n",
+    "ax[1].legend(\n",
+    "    bbox_to_anchor=(1.05, 1), loc=\"upper left\", borderaxespad=0.0, fontsize=8\n",
+    ")\n",
     "ax[1].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -362,7 +366,7 @@
     }
    ],
    "source": [
-    "print(results['CVXPY']['doserates']) # pcSv/s"
+    "print(results[\"CVXPY\"][\"doserates\"])  # pcSv/s"
    ]
   }
  ],
