% pip install for collab

--- a/example/01-basic-example.ipynb
+++ b/example/01-basic-example.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc8f6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install bssunfold pandas numpy matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b16e8599",
    "metadata": {},
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0a031877",
    "metadata": {},
    "outputs": [],
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "af858a73",
    "metadata": {},
    "outputs": [
@@ -226,13 +236,13 @@
       "Status: optimal\n",
       "Objective value: 8.307264458127003e-05\n",
       "Residual norm: 0.000000\n",
-      "Result saved with key: 20260110_215650_cvxpy\n",
+      "Result saved with key: 20260110_222051_cvxpy\n",
       "Status: optimal\n",
       "Objective value: 8.307081011145175e-05\n",
       "Residual norm: 0.000000\n",
-      "Result saved with key: 20260110_215650_cvxpy\n",
-      "Result saved with key: 20260110_215650_Landweber\n",
-      "Result saved with key: 20260110_215650_Landweber\n"
+      "Result saved with key: 20260110_222051_cvxpy\n",
+      "Result saved with key: 20260110_222051_Landweber\n",
+      "Result saved with key: 20260110_222051_Landweber\n"
      ]
     }
    ],
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fbd83221",
    "metadata": {},
    "outputs": [
@@ -355,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "eaec8109",
    "metadata": {},
    "outputs": [
