additional support for 3.14

--- a/examples/02-basic-example-for-mybinder.ipynb
+++ b/examples/02-basic-example-for-mybinder.ipynb
@@ -10,57 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bcc8f6cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: bssunfold in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (0.1.1)\n",
-      "Requirement already satisfied: pandas in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (2.3.3)\n",
-      "Requirement already satisfied: numpy in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (2.4.0)\n",
-      "Requirement already satisfied: matplotlib in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (3.10.8)\n",
-      "Requirement already satisfied: cvxpy in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (1.7.5)\n",
-      "Requirement already satisfied: ecos in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (2.0.14)\n",
-      "Requirement already satisfied: pyzmq>=27.1.0 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from bssunfold) (27.1.0)\n",
-      "Requirement already satisfied: scipy>=1.16.3 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from bssunfold) (1.16.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from pandas) (2025.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (4.61.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (1.4.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (12.0.0)\n",
-      "Requirement already satisfied: pyparsing>=3 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from matplotlib) (3.3.1)\n",
-      "Requirement already satisfied: osqp>=1.0.0 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from cvxpy) (1.0.5)\n",
-      "Requirement already satisfied: clarabel>=0.5.0 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from cvxpy) (0.11.1)\n",
-      "Requirement already satisfied: scs>=3.2.4.post1 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from cvxpy) (3.2.9)\n",
-      "Requirement already satisfied: cffi in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from clarabel>=0.5.0->cvxpy) (2.0.0)\n",
-      "Requirement already satisfied: cvxopt in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from cvxpy[cvxopt,ecos]>=1.1->bssunfold) (1.3.2)\n",
-      "Requirement already satisfied: jinja2 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from osqp>=1.0.0->cvxpy) (3.1.6)\n",
-      "Requirement already satisfied: setuptools in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from osqp>=1.0.0->cvxpy) (80.9.0)\n",
-      "Requirement already satisfied: joblib in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from osqp>=1.0.0->cvxpy) (1.5.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Requirement already satisfied: pycparser in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from cffi->clarabel>=0.5.0->cvxpy) (2.23)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/spiralfractal/Work/code/bssunfold/.venv/lib/python3.12/site-packages (from jinja2->osqp>=1.0.0->cvxpy) (3.0.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install bssunfold pandas numpy matplotlib cvxpy ecos"
+    "# %pip install bssunfold pandas numpy matplotlib cvxpy ecos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b16e8599",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(CVXPY) Jan 18 06:46:45 PM: Encountered unexpected exception importing solver OSQP:\n",
+      "RuntimeError('No algebra backend available!')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -80,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "52118a10",
    "metadata": {},
    "outputs": [],
@@ -93,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5cc74a7b",
    "metadata": {},
    "outputs": [],
@@ -229,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0a031877",
    "metadata": {},
    "outputs": [],
@@ -262,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "af858a73",
    "metadata": {},
    "outputs": [
@@ -273,9 +245,9 @@
       "Status: optimal\n",
       "Objective value: 8.307264458127003e-05\n",
       "Residual norm: 0.000000\n",
-      "Result saved with key: 20260113_230954_cvxpy\n",
-      "Result saved with key: 20260113_230955_Landweber\n",
-      "Result saved with key: 20260113_230955_Landweber\n"
+      "Result saved with key: 20260118_184645_cvxpy\n",
+      "Result saved with key: 20260118_184645_Landweber\n",
+      "Result saved with key: 20260118_184645_Landweber\n"
      ]
     }
    ],
@@ -301,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fbd83221",
    "metadata": {},
    "outputs": [
@@ -395,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "eaec8109",
    "metadata": {},
    "outputs": [
