--- a/examples/01-basic-example.ipynb
+++ b/examples/01-basic-example.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install bssunfold pandas numpy matplotlib"
+    "# %pip install bssunfold pandas numpy matplotlib"
    ]
   },
   {
