--- a/examples/02-basic-example-for-mybinder.ipynb
+++ b/examples/02-basic-example-for-mybinder.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bcc8f6cb",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "%pip install bssunfold pandas numpy matplotlib cvxpy ecos"
+    "# %pip install bssunfold pandas numpy matplotlib cvxpy ecos"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
